--- a/contacts.html
+++ b/contacts.html
@@ -53,14 +53,14 @@
         </section>
 
         <section>
-            <h2>Наша адреса</h2>
-            <p>м. Київ, вул. Політехнічна, (вигадана адреса)</p>
+            <h2>Як з нами зв'язатися</h2>
+            <p>Номер телефону: +380000000000</p>
             <p>Email: support@fitness-health.ua</p>
         </section>
     </main>
 
     <footer>
-        <p>© 2025 Fitness&Health. Всі права захищено.</p>
+        <p>© 2025 Fitness&Health.</p>
     </footer>
 </body>
 </html>
