--- a/login.html
+++ b/login.html
@@ -40,13 +40,13 @@
                     <button type="submit">Увійти</button>
                 </div>
             </form>
-            <p>Ще не маєте акаунту? (Тут буде посилання на реєстрацію)</p>
+            <p>Ще не маєте акаунту? (буде посилання на реєстрацію)</p>
         </section>
 
     </main>
 
     <footer>
-        <p>© 2025 Fitness&Health. Всі права захищено.</p>
+        <p>© 2025 Fitness&Health. </p>
     </footer>
 </body>
 </html>
