--- a/dashboard.html
+++ b/dashboard.html
@@ -24,28 +24,28 @@
 
     <main>
         <h1>Особистий кабінет</h1>
-        <p>Вітаємо, Маріє! (або ім'я користувача)</p>
+        <p>Вітаємо, ім'я користувача</p>
 
         <section>
-            <h2>Мій план</h2> [cite: 130]
-            <p>Тут буде відображатися персоналізований план тренувань та харчування.</p>
-            <p>Сьогоднішні завдання: (список завдань)</p>
+            <h2>Мій план</h2>
+            <p>буде відображатися персоналізований план тренувань та харчування.</p>
+            <p>Сьогоднішні завдання: </p>
         </section>
         
         <section>
-            <h2>Прогрес</h2> [cite: 131]
-            <p>Тут будуть графіки та статистика вашого прогресу.</p>
+            <h2>Прогрес</h2>
+            <p>будуть графіки та статистика прогресу</p>
         </section>
 
         <section>
-            <h2>Налаштування</h2> [cite: 132]
-            <p>Тут можна буде змінити особисті дані, пароль та налаштування сповіщень.</p>
+            <h2>Налаштування</h2> 
+            <p>змінити особисті дані, пароль та налаштування сповіщень.</p>
         </section>
 
     </main>
 
     <footer>
-        <p>© 2025 Fitness&Health. Всі права захищено.</p>
+        <p>© 2025 Fitness&Health.</p>
     </footer>
 </body>
 </html>
