--- a/contacts.html
+++ b/contacts.html
@@ -30,27 +30,30 @@
             <h2>Зв'яжіться з нами</h2>
             <p>Якщо у вас є питання, пропозиції або ви хочете замовити консультацію, заповніть форму нижче.</p>
             
-            <form action="#" method="post">
-                <div>
-                    <label for="name">Ваше ім'я:</label>
-                    <input type="text" id="name" name="user_name" required minlength="2">
-                </div>
-                <div>
-                    <label for="email">Ваш Email:</label>
-                    <input type="email" id="email" name="user_email" required minlength="2">
-                </div>
-                <div>
-                    <label for="subject">Тема:</label>
-                    <input type="text" id="subject" name="user_subject">
-                </div>
-                <div>
-                    <label for="message">Повідомлення:</label>
-                    <textarea id="message" name="user_message" rows="5" required minlength="2"></textarea>
-                </div>
-                <div>
-                    <button type="submit">Надіслати</button>
-                </div>
-            </form>
+            <form id="contact-form" action="#" method="post"> <div>
+        <label for="name">Ваше ім'я:</label>
+        <input type="text" id="name" name="user_name" class="js-validate" required minlength="2">
+        <p class="error-text" id="error-name"></p> </div>
+    <div>
+        <label for="email">Ваш Email:</label>
+        <input type="email" id="email" name="user_email" class="js-validate" required minlength="2">
+        <p class="error-text" id="error-email"></p>
+    </div>
+    <div>
+        <label for="subject">Тема:</label>
+        <input type="text" id="subject" name="user_subject">
+    </div>
+    <div>
+        <label for="message">Повідомлення:</label>
+        <textarea id="message" name="user_message" rows="5" class="js-validate" required minlength="2"></textarea>
+        <p class="error-text" id="error-message"></p>
+    </div>
+    <div>
+        <button type="submit">Надіслати</button>
+    </div>
+</form>
+
+<div id="success-message" class="hidden-content" style="color: green; font-weight: bold;"></div>
         </section>
 
         <section>
@@ -63,5 +66,9 @@
     <footer>
         <p>© 2025 Fitness&Health.</p>
     </footer>
+
+
+<script src="js/main.js"></script>
 </body>
 </html>
+
